# talon

./: .coveragerc  .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CLA.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SOUL.md  USER.md  buf.gen.sdk.yaml  buf.yaml  build.rs  docker-compose.yaml  envoy-cloudrun.yaml  envoy-vibe.yaml  envoy.yaml  pnpm-lock.yaml  pnpm-workspace.yaml  proto_serde.rs  pyrightconfig.json  pytest.ini  run.sh  talon.compose.yaml  talon.docker-compose.yaml  talon.yaml
.cargo/: config.toml
.githooks/: pre-push
.github/: license-header.txt
.github/workflows/: bench-1vcpu.yml  ci.yml  cla.yml  publish-copilot.yml  publish.yaml  sdk-publish.yml  talon-chat-chromatic.yml  talon-chat-screenshots.yml  talon-sightline-cloudflare.yml  talon-sync-notify.yml  ui-e2e.yml
bench/: README.md  benchmark_1000_agents.py  mock_llm_server.py  runtime.Dockerfile
dockerfiles/: codex-acp.Dockerfile  dev-jwt.env  envoy-cloudrun.Dockerfile  envoy.Dockerfile  envoy.yaml.template  oss-runtime.Dockerfile  oss-ui.Dockerfile  pgadmin-servers.json  talon-envoy-entrypoint.sh
docs/: 00-introduction.md  index.md  intro.md
docs-site/: blume.config.ts  docusaurus.config.mjs  package.json  sidebars.mjs  tsconfig.json
docs-site/pages/: index.astro
docs-site/scripts/: generate-reference.mjs
docs/01-getting-started/: 01-quickstart.md  02-architecture.md  index.md
docs/02-concepts/: 01-how-talon-works.md  02-runtime-topology.md  03-resource-model.md  04-agents-and-templates.md  05-sessions-and-streaming.md  06-namespaces-knowledge-and-mcp.md  07-using-sightline.md  index.md
docs/03-tutorials/: 00-overview.md  01-first-agent.md  02-build-a-client.md  03-chatgpt-app.md  04-internal-ops-copilot.md  05-customer-retention-system.md  06-marketing-agency.md  07-channel-collaboration.md  index.md
docs/04-operations/: 01-local-development.md  02-single-host-development.md  03-configuration.md  04-authentication-and-access.md  05-scheduling-and-background-work.md  (+3 more)
manifests/: default_agent.yaml  talon-ops.mcp-server.yaml
proto/: buf.yaml.bak  config.proto  events.proto  gateway.proto  manifests.proto  models.proto
scratch/: setup-pubsub-push.sh
scripts/: apply_rust_license_headers.sh  check_resource_proto_oneofs.py  check_rust_license_headers.sh  install_latest_macos_cli.sh  push_aws_runtime_image.sh
sdk/examples/python/: main.py  pyproject.toml
sdk/examples/rust/: Cargo.toml
sdk/examples/rust/src/: main.rs
sdk/python/talon-client/: README.md  pyproject.toml
sdk/python/talon-client/src/talon_client/: __init__.py  auth.py  clientset.py  config.py  data.py  events.py  external.py  harness.py  resources.py  v1.py
sdk/python/talon-client/src/talon_client/google/api/: annotations_pb2.py
sdk/python/talon-client/src/talon_client/proto/: config_pb2.py  config_pb2.pyi  events_pb2.py  events_pb2.pyi  gateway_pb2.py  gateway_pb2_grpc.py  manifests_pb2.py  models_pb2.py
sdk/python/talon-client/src/talon_client/proto/data/: api_keys_pb2.pyi  connectors_pb2.py  connectors_pb2.pyi  connectors_pb2_grpc.py  data_pb2.py  data_pb2.pyi  data_pb2_grpc.py  routing_pb2.py  routing_pb2.pyi  routing_pb2_grpc.py  search_pb2.pyi  search_pb2_grpc.py  session_journal_entry_pb2.py  session_journal_entry_pb2.pyi  session_journal_entry_pb2_grpc.py  session_submission_pb2.py  session_submission_pb2.pyi
sdk/python/talon-client/src/talon_client/proto/harness/: llm_pb2.py  llm_pb2.pyi  llm_pb2_grpc.py
sdk/python/talon-client/src/talon_client/proto/resources/: agents_pb2.py  agents_pb2.pyi  channels_pb2.py  channels_pb2.pyi  common_pb2.pyi  connectors_pb2.py  connectors_pb2.pyi  connectors_pb2_grpc.py  deployments_pb2.py  deployments_pb2.pyi  deployments_pb2_grpc.py  files_pb2.py  files_pb2.pyi  files_pb2_grpc.py  knowledge_pb2.py  knowledge_pb2.pyi  mcp_pb2.py  mcp_pb2.pyi  mcp_pb2_grpc.py  namespaces_pb2.py  namespaces_pb2.pyi  resource_pb2.py  resource_pb2.pyi  routing_pb2.py  routing_pb2.pyi  routing_pb2_grpc.py  sandboxes_pb2.py  sandboxes_pb2.pyi  schedules_pb2.py  schedules_pb2.pyi  secrets_pb2.py  secrets_pb2.pyi  secrets_pb2_grpc.py  sessions_pb2.py  sessions_pb2.pyi  sessions_pb2_grpc.py  skills_pb2.py  skills_pb2.pyi  skills_pb2_grpc.py  tasks_pb2.py  (+8 more)
sdk/python/talon-client/src/talon_client/proto/talon/v1/: api_pb2.py  api_pb2_grpc.py  auth_pb2.py  auth_pb2.pyi  auth_pb2_grpc.py  cas_pb2.py  cas_pb2.pyi  cas_pb2_grpc.py  channels_pb2.py  channels_pb2.pyi  channels_pb2_grpc.py  connectors_pb2.py  connectors_pb2.pyi  connectors_pb2_grpc.py  files_pb2.py  files_pb2.pyi  files_pb2_grpc.py  knowledge_pb2.py  knowledge_pb2.pyi  knowledge_pb2_grpc.py  namespaces_pb2.pyi  namespaces_pb2_grpc.py  resources_pb2.py  resources_pb2.pyi  resources_pb2_grpc.py  search_pb2.py  search_pb2.pyi  search_pb2_grpc.py  sessions_pb2.py  sessions_pb2.pyi  sessions_pb2_grpc.py  workflows_pb2.py  workflows_pb2.pyi  workflows_pb2_grpc.py
sdk/python/talon-client/tests/: test_generated.py
sdk/python/talon-server/: README.md  pyproject.toml
sdk/python/talon-server/src/talon_server/: __init__.py  server.py
sdk/python/talon-server/tests/: test_server.py
sdk/rust/talon-client/: Cargo.toml
sdk/rust/talon-client/src/: client.rs  lib.rs
sdk/rust/talon-client/tests/: generated.rs
src/: lib.rs  manifest.rs  native_tools.rs  profiling.rs  scheduling.rs  telemetry.rs  workflows.rs
tests/: aws_local_e2e.rs  conftest.py  mock_acp_cli.rs  mock_llm.py  requirements.txt  run_cloudflare_e2e.py  run_e2e_stack.py  talon_v1_test_client.py  test_a2a_compat.py  test_acp_sqlite.py  test_aws_e2e.py  test_chat.py  test_chat_sqlite.py  test_cli_sqlite.py  test_connectors.py  test_delegation.py  test_durable_sessions_stress.py  test_e2e_guardrails.py  test_harness.py  test_mock_llm.py  test_resources.py  test_search.py  test_usage_policy.py  test_workers.py  test_workflows.py
ui/: CONNECTION_STATE.md  buf.gen.yaml  index.html  jest.config.js  jest.setup.js  next.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  tailgrids.config.json  tsconfig.json  types.d.ts  vite.config.ts
(+729 files in other folders)
