[package]
name = "talon-server-example"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[dependencies]
anyhow = "1.0"
talon-client = { path = "../../rust/talon-client" }
talon-server = { path = "../../rust/talon-server" }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
