[package]
name = "talon-client"
version = "0.1.17"
edition = "2021"
license = "AGPL-3.0-only"
description = "Generated Talon protobuf and gRPC client bindings"

[dependencies]
futures = "0.3"
http-body = "1"
http-body-util = "0.1"
prost = "0.13"
prost-types = "0.13"
reqwest-grpc-web = { package = "reqwest", version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
tonic = { version = "0.12.3", features = ["tls-webpki-roots"] }
tonic-web = "0.12.3"

[dev-dependencies]
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread"] }
